[package]
name        = "httpdl"
version     = "0.4.0"
authors     = ["Igor Baidiuk <target.san@gmail.com>"]
description = "A simple HTTP file downloader. Supports specifying number of threads and limiting download speed"
edition     = "2021"

[dependencies]
clap            = { version = "3.2.6", features = [ "derive" ] }
thiserror       = "1.0.31"
anyhow          = "1.0.58"
reqwest         = { version = "0.11.11", features = [ "multipart", "blocking" ] }
crossbeam-utils = "0.8.10"

[dev-dependencies]
assert_matches  = "1.5.0"
rand            = "0.8.5"
